# openclaw-official

./: .coverage  .gitignore  CLAUDE.md  README.md  launcher.py  openclaw  openclaw.bat  openclaw.command  openclaw.desktop  pyproject.toml  requirements.txt
app/core/: package-lock.json  package.json
app/runtime/: .gitignore
lib/: common.py
scripts/: openclaw.service
starter/: config.json  package.json
tests/: conftest.py  test_common.py  test_server_channels.py
webui/: server.py  starter.html
